refactored server.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,16 +74,17 @@
             <option value="Rural">Rural</option>
         </select>
         <br>
+        <br>
         <div>
             <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
         </div>
     </form>
     <br>
     <hr>
+   <h4>Will you repay your loan?? </h4>
    {{ prediction_text }}
-
  </div>
-
+    <div style="margin-top:300px"></div>
 
 </body>
 </html>
