--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
- <div class="login">
-	<h2>Predict Loan Repayment</h2>
+    <div>
+        <h2>Loan Repayment Prediction</h2>
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="POST">
