--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 <!--From https://codepen.io/frytyler/pen/EGdtg-->
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
   <title>ML API</title>
 </head>
 
@@ -11,7 +13,7 @@
         <h2>Loan Repayment Prediction</h2>
 
      <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}"method="POST">
+    <form action="{{ url_for('predict') }}"method="POST">
         <label for="gender">Choose a gender:</label>
         <select name="gender" id="gender">
         <option value="Male">Male</option>
